# Drone_Autonomy_Software

./: CMakeLists.txt  CONTRIBUTING.md  DEBUG.md  Dockerfile  Doxyfile  INSTALL.md  README.md
.devcontainer/: Dockerfile_Focal  Dockerfile_Jammy  Dockerfile_JetPack  devcontainer.json  install-cmake.sh
.github/workflows/: codeql.yml  deploy_autonomy.yml  tests.yml  valgrind.yml
data/: README.md
data/ASCII/: README.md  v24.txt
data/models/zed/: .8501_timing_cache
docs/: README.md
examples/: README.md
examples/vision/: OpenZEDCam.hpp
src/: AutonomyConstants.h  AutonomyGlobals.cpp  AutonomyGlobals.h  AutonomyLogging.h  README.md  main.cpp
src/drivers/: README.md
src/interfaces/: AutonomyThread.hpp  README.md  StateMachine.hpp
src/states/: CMakeLists.txt  DroneState.cpp  DroneState.h  IdleState.hpp  README.md
src/threads/: README.md
src/util/: NumberOperations.hpp  README.md
src/vision/: README.md
tests/: README.md
tests/Integration/: README.md
tests/Unit/: README.md
tools/: README.md
tools/valgrind/: README.md  run_valgrind.sh
